💄 (Chat): Added a property to prevent horizontal scrollbar

--- a/public/style.css
+++ b/public/style.css
@@ -82,6 +82,7 @@ li {
 .chatList li {
   padding: 3px;
   font-size: 15px;
+  word-break: break-word;
 }
 
 .chatList li.m-status {
